--- a/css/main.css
+++ b/css/main.css
@@ -10,4 +10,5 @@
     padding: 20px;
     background-color: 393939;
     color: azure;
+    font-family: 'Source Code Pro', monospace;
 }             
